Fixed duplicate scrollbars in previews

--- a/src/main/resources/css/fileview.css
+++ b/src/main/resources/css/fileview.css
@@ -1,11 +1,15 @@
+html, body {
+    max-width: 100vw;
+    overflow: hidden;
+}
+
 .preview, .switch, .settings {
     display: none;
 }
 
-/* TODO: Fix duplicate scrollbars in previews */
 .prettyprint, .preview {
     position: absolute;
-    min-height: 100%;
+    height: 100%;
     width: 100%;
     border: none !important;
     overflow: visible;
